--- a/styles.css
+++ b/styles.css
@@ -10,38 +10,11 @@ body {
   color: #1B1B1A; 
 }
 
-/* footer */
-
-footer {
-  width: calc(100% - 60px);
-  padding: 45px 30px 15px 30px;
-  background-color: #f0f0f0;
-}
-
-.footer {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
-  gap: 50px;
-  max-width: 100%;
-}
-
-.footer-logo {
-  max-height: 45px;
-  margin-bottom: 40px;
-}
-
-.accred {
-  max-height: 70px;
-  margin: 5px 20px 0 0;
-}
-
 /* main */
 
 main {margin: 0; padding-top: 72px;}
-main.direct-content {margin: 100px 0px;}
-
 section {width: 100%; margin: 50px 0;}
-section.accueil {margin: 0;}
+section.accueil , section.accueil-page {margin: 0;}
 
 /* texts */
 
@@ -73,11 +46,11 @@ h3 {
   font-weight: 400;
 }
 
+.note {font-size: 15px;}
+
 /* links */
 
-.link-box {
-  margin: 20px 30px;
-}
+.box {margin: 20px 30px;}
 
 a {
   font-weight: 500;
@@ -135,6 +108,10 @@ main img {
   display: block;
 }
 
+.accueil-page img {
+  height: 50vh;
+}
+
 /* slider */
 
 .slider {
@@ -187,13 +164,7 @@ main img {
 
 /* form */
 
-form {
-  margin: 20px 30px 80px 30px;
-}
-
-form p{
-  margin: 0 0 20px 0;
-}
+.hidden {display: none;}
 
 button.showSectionButton , input.send {
   cursor: pointer;
@@ -207,9 +178,10 @@ button.showSectionButton , input.send {
   background-color: #f0f0f0; 
 }
 
-.list {list-style-type: decimal-leading-zero; }
+.list {list-style-type: decimal-leading-zero; margin: 0 20px 20px 20px}
 
-.hidden{display: none;}
+form {margin: 20px 30px 80px 30px;}
+form p {margin: 0 0 20px 0;}
 
 input.fill , textarea {
   width: 100%;
@@ -238,23 +210,10 @@ input.fill , textarea {
   background-color: #f0f0f0;
 }
 
-input[type="file"] {
-  display: none;
-}
-
-textarea {
-  min-height: 100px;
-  max-width: 100%;
-}
-
-::placeholder {
-  color: inherit;
-  opacity: 0.33;
-}
-
-textarea:focus, input:focus{
-    outline: none;
-}
+input[type="file"] {display: none;}
+textarea {min-height: 100px; max-width: 100%;}
+::placeholder {color: inherit; opacity: 0.33;}
+textarea:focus, input:focus {outline: none;}
 
 /* Footer prev */
 
@@ -266,9 +225,7 @@ textarea:focus, input:focus{
   max-width: calc(100% - 60px);
 }
 
-.footer-prev h2{
-  margin: 0 0 25px 0;
-}
+.footer-prev h2{margin: 0 0 25px 0;}
 
 .module {
   display: grid;
@@ -277,17 +234,10 @@ textarea:focus, input:focus{
   width: 100%;
 }
 
-.note{
-  font-size: 15px;
-}
-
-footer .note {
-  margin: 100px 0 0 0;
-}
-
 /* faces container */
 
 .container {
+  margin: 0 30px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 5px;
@@ -334,9 +284,28 @@ footer .note {
   #responsive-reverse {display: flex; flex-direction: column-reverse;}
   .sidenav.open {width: 100%;}
   .desktop-menu {display: none;}
-  main.direct-content {margin: 30px 0;}
   #DMB1 , #LS1 {display: none;}
 }
+
+/* footer */
+
+footer {
+  width: calc(100% - 60px);
+  padding: 45px 30px 15px 30px;
+  background-color: #f0f0f0;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
+  gap: 50px;
+  max-width: 100%;
+}
+
+.footer-logo {max-height: 45px;margin-bottom: 40px;}
+.accred {max-height: 70px; margin: 5px 20px 0 0;}
+
+footer .note {margin: 100px 0 0 0;}
 
 /* header */
 
