--- a/styles.css
+++ b/styles.css
@@ -244,18 +244,10 @@ textarea:focus, input:focus {outline: none;}
   max-width: 100%;
 }
 
-.portrait {
-  height: auto;
-  aspect-ratio: 1 / 1;
-}
+.portrait {height: auto; aspect-ratio: 1 / 1;}
 
-.item p , .item p.note {
-  margin: 5px 0 0 0;
-}
-
-.item p.note {
-  margin: 0 0 15px 0;
-}
+.item p , .item p.note {margin: 5px 0 0 0;}
+.item p.note {margin: 0 0 15px 0;}
 
 #list {
   display: grid;
@@ -269,6 +261,22 @@ textarea:focus, input:focus {outline: none;}
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+
+/* Partners Wall */
+
+.partners-wall {
+  margin: 30px 0 0 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 50px;
+  max-width: 100%;
+}
+
+.partner {
+  max-width: 100%;
+  max-height: 50px;
+  object-fit: contain;
 }
 
 /* responsive */
