--- a/styles.css
+++ b/styles.css
@@ -263,6 +263,10 @@ textarea:focus, input:focus {outline: none;}
   text-overflow: ellipsis;
 }
 
+/* map */
+
+.map {filter: grayscale(100%);}
+
 /* Partners Wall */
 
 .partners-wall {
@@ -496,3 +500,4 @@ body.dark-mode .sidenav a , body.dark-mode .sub-links a {color: #fff;}
 body.dark-mode .bar1 , body.dark-mode .bar2 , body.dark-mode .bar3 {background-color: #fff;}
 body.dark-mode .footer-prev {background-color: #262626;}
 body.dark-mode img.svg-img {filter: brightness(0) invert(0.95);}
+body.dark-mode .map {filter: grayscale(100%) invert(92%) contrast(83%);}
