--- a/styles.css
+++ b/styles.css
@@ -270,16 +270,16 @@ textarea:focus, input:focus {outline: none;}
 /* Partners Wall */
 
 .partners-wall {
-  margin: 30px 0 0 0;
+  margin: 75px 0 25px 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
   gap: 50px;
   max-width: 100%;
 }
 
 .partner {
   max-width: 100%;
-  max-height: 50px;
+  max-height: 75px;
   object-fit: contain;
 }
 
