--- a/styles.css
+++ b/styles.css
@@ -162,9 +162,10 @@ main img {
     80% { transform: translateY(-10px); }
 }
 
-/* form */
+/* showers & forms & buttons */
 
-.hidden {display: none;}
+.toggle-section {display: none;}
+.news-section {display: block;}
 
 button.showSectionButton , input.send {
   cursor: pointer;
