--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ a.classic-link {
   display: inline-block; 
   padding: 5px 15px 5.5px 17px;
   border-radius: 500px;
-  background-color: #f0f0f0;
+  background-color: #e1e1e1;
 }
 
 a.hermit-link {
@@ -176,7 +176,7 @@ button.showSectionButton , input.send {
   padding: 5px 15px 5.5px 17px;
   border-radius: 500px;
   border: none;
-  background-color: #f0f0f0; 
+  background-color: #e1e1e1; 
 }
 
 .list {list-style-type: decimal-leading-zero; margin: 0 20px 20px 20px}
@@ -208,7 +208,7 @@ input.fill , textarea {
   padding: 5px 15px 5.5px 17px;
   border-radius: 500px;
   border: none;
-  background-color: #f0f0f0;
+  background-color: #e1e1e1;
 }
 
 input[type="file"] {display: none;}
@@ -219,7 +219,7 @@ textarea:focus, input:focus {outline: none;}
 /* Footer prev */
 
 .footer-prev {
-  background-color: #ffe1e1;
+  background-color: #f7f7f7;
   margin-bottom: 0;
   padding: 30px 30px 50px 30px;
   max-width: calc(100% - 60px);
@@ -304,7 +304,7 @@ textarea:focus, input:focus {outline: none;}
 footer {
   width: calc(100% - 60px);
   padding: 45px 30px 15px 30px;
-  background-color: #f0f0f0;
+  background-color: #e1e1e1;
 }
 
 .footer {
@@ -465,7 +465,7 @@ a:hover , .sidenav a:hover, .sub-links a:hover , header img:hover , .burger:hove
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #f0f0f0; 
+  background-color: #e1e1e1; 
   transition: 0.4s;
   border-radius: 20px;
 }
@@ -484,20 +484,20 @@ a:hover , .sidenav a:hover, .sub-links a:hover , header img:hover , .burger:hove
 
 /* DarkMode styles */
 
-.darkModeToggle:checked + .darkModeLabel .darkModeSlider {background-color: #262626;}
+.darkModeToggle:checked + .darkModeLabel .darkModeSlider {background-color: #2f2f2f;}
 .darkModeToggle:checked + .darkModeLabel .darkModeSlider:before {transform: translateX(20px);}
 
 body.dark-mode {background-color: #1B1B1A; color: #fff;}
 body.dark-mode header {background-color: #1B1B1A; color: #fff;}
 body.dark-mode .sidenav {background-color: #1B1B1A;}
 body.dark-mode .dropdown-menu {background-color: #1B1B1A;}
-body.dark-mode footer {background-color: #262626; color: #fff;}
-body.dark-mode .classic-link {background-color: #262626;}
-body.dark-mode .showSectionButton {background-color: #262626; color: #fff;}
-body.dark-mode .file-label {background-color: #262626; color: #fff;}
-body.dark-mode .send {background-color: #262626; color: #fff;}
+body.dark-mode footer {background-color: #2f2f2f; color: #fff;}
+body.dark-mode .classic-link {background-color: #2f2f2f;}
+body.dark-mode .showSectionButton {background-color: #2f2f2f; color: #fff;}
+body.dark-mode .file-label {background-color: #2f2f2f; color: #fff;}
+body.dark-mode .send {background-color: #2f2f2f; color: #fff;}
 body.dark-mode .sidenav a , body.dark-mode .sub-links a {color: #fff;}
 body.dark-mode .bar1 , body.dark-mode .bar2 , body.dark-mode .bar3 {background-color: #fff;}
-body.dark-mode .footer-prev {background-color: #535b57;}
+body.dark-mode .footer-prev {background-color: #262626;}
 body.dark-mode img.svg-img {filter: brightness(0) invert(0.95);}
 body.dark-mode .map {filter: grayscale(100%) invert(92%) contrast(83%);}
