--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ section.centered {
   padding: 50px 30px;
   border-bottom: 1px solid grey;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 50px;
   width: calc(100% - 60px);
 }
@@ -29,7 +28,6 @@ section.centered {
 /* texts */
 
 p {
-  text-align: justify;
   margin: 0px 30px 20px 30px
 }
 
@@ -174,7 +172,6 @@ main img {
 .thumbnail-shower {
   margin: 75px 20px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   gap: 25px 5px;
   max-width: 100%;
 }
@@ -196,7 +193,8 @@ main img {
   margin: 0;
   text-align: center;
   opacity: 0; 
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
+  color: black;
   position: absolute; 
   top: -5px;
   left: 0;
@@ -206,7 +204,6 @@ main img {
   justify-content: center; 
   align-items: center; 
   transition: opacity 0.7s ease;
-  color: white;
 }
 
 .thumbnail img {
@@ -227,8 +224,8 @@ button.showSectionButton {
   color: inherit;
   background-color: rgba(255,255,255,0);
   font-family: Roboto;
-  font-size: 45px;
-  font-weight: 300;
+  font-size: 30px;
+  font-weight: 400;
   border: none;
   text-align: left;
   display: inline-flex;
@@ -358,6 +355,11 @@ ul.cartouche {
   .mono {width: 60%; margin: 100px 2.5% 100px 37.5%;}
   .sidenav.open {width: 50%;}
   .burger , .sidenav {display: none;}
+}
+
+@media only screen and (min-width: 500px) {
+  section.centered {grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));}
+  .thumbnail-shower {grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));}
 }
 
 @media only screen and (max-width: 1080px) {
@@ -523,3 +525,4 @@ body.dark-mode .bar1 , body.dark-mode .bar2 , body.dark-mode .bar3 {background-c
 body.dark-mode .footer-prev {background-color: #262626;}
 body.dark-mode img.svg-img {filter: brightness(0) invert(0.95);}
 body.dark-mode .map {filter: grayscale(100%) invert(92%) contrast(83%);}
+body.dark-mode .cache {background-color: rgba(0, 0, 0, 0.7); color: white;}
