--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  font-size: 19px;
+  font-size: 17px;
   font-weight: 300;
   line-height: 25px;
   background-color: #fff; 
@@ -13,13 +13,19 @@ body {
 
 /* main */
 
-main {margin: 0; padding-top: 72px;}
+main {margin: 0;}
 
 section {width: 100%; margin: 50px 0;}
 section.accueil , section.accueil-page {margin: 0;}
 
 section.centered {
-  padding: 50px 30px;
+  text-align: center;
+  max-width: 1200px;
+  margin: 120px auto;
+}
+
+section.menu {
+  padding: 100px 30px 50px 30px;
   border-bottom: 1px solid grey;
   display: grid;
   gap: 50px;
@@ -39,7 +45,7 @@ section.mosaic {
   overflow: hidden;
   font-size: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(calc(16.66% - 10px), 1fr)); /* Three columns with equal width */
+  grid-template-columns: repeat(auto-fill, minmax(calc(16.66% - 10px), 1fr));
   gap: 10px;
 }
 
@@ -51,16 +57,23 @@ section.long {
   padding-bottom: 40px;
 }
 
+div.right {
+  display: flex;
+  align-items: center;
+  margin-right: calc(100% - 650px);
+}
+
+div.left {
+  text-align: right;
+  display: flex;
+  align-items: center;
+  margin-left: calc(100% - 650px);
+}
+
 /* texts */
 
-p {
-  margin: 0px 30px 20px 30px
-}
-
-b {
-  font-weight: 700;
-  color: grey;
-}
+p {margin: 0px 30px 20px 30px;}
+b {font-weight: 700; color: grey;}
 
 h1 {
   color: inherit;
@@ -76,13 +89,14 @@ h2 {
   margin: 0px 30px 20px 30px;
   font-size: 45px;
   font-weight: 400;
-  line-height: 45px;
+  line-height: 52.5px;
 }
 
 h3 {
   margin: 0px 30px 20px 30px;
   font-size: 26px;
   font-weight: 400;
+  line-height: 33.5px;
 }
 
 .note {font-size: 15px;}
@@ -90,8 +104,6 @@ h3 {
 /* box */
 
 .box {margin: 20px 30px;}
-.box img {margin-bottom: 10px}
-.mosaic img {aspect-ratio: 3/2; height: auto; width: 100%;}
 
 /* links */
 
@@ -101,23 +113,16 @@ a {
   color: inherit;
 }
 
-a.hermit-link {
+a.news-link {
   display: block;
   line-height: 32px;
-  padding: 5px 0px 3px 0px;
-  margin: 0;
-  border-bottom: 1px solid;
-  color: inherit;
+  padding: 20px 0 0 0;
+  margin: 0 30px;
+  border-top: 1px solid grey;
+  text-align: center;
 }
 
-a.hermit-link p , a.hermit-link h3 , .hermit-link h1 {
-  margin: 0;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-a.hermit-link p {margin-top: 10px;}
+a.news-link:first-of-type {border-top: none;}
 
 a.color-reversed-link {
   width: 118px;
@@ -127,21 +132,28 @@ a.color-reversed-link {
   border: 1px solid #fff;
 }
 
-a span {font-size: 27px; font-weight: 400;}
+.classic-link span {
+  font-size: 53px;
+  font-weight: 100;
+  padding-right: 13px;
+  display: inline-block;
+  transform: translateY(7px);
+  color: red;
+}
 
 /* images */
 
 main img {
   width: 100%;
-  height: calc(100vh - 72px);
+  height: calc(100vh);
   margin: 0px;
   object-fit: cover;
   display: block;
 }
 
-.accueil-page img {
-  height: 50vh;
-}
+.accueil-page img {height: 54vh;}
+.box img {margin-bottom: 10px}
+.mosaic img {height: auto; width: 100%;}
 
 /* slider */
 
@@ -154,22 +166,6 @@ main img {
 
 .slides {display: flex;}
 .slide {flex: 0 0 100%; position: relative;}
-.slide:hover .overlay {opacity: 1;}
-.slide:hover {filter: grayscale(100%);transition: 0.5s;}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  transition: opacity 0.5s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .quote {
   color: #fff; /* white */
@@ -178,7 +174,7 @@ main img {
 }
 
 .scroll {
-  color: #fff; /* white */
+  color: black;
   z-index: 1000;
   position: absolute;
   bottom: 35px;
@@ -216,7 +212,7 @@ main img {
   font-size: 100px;
   font-weight: 100;
   padding: 0; 
-  margin: 0;
+  margin: auto;
   text-align: center;
   opacity: 0; 
   background-color: rgba(255, 255, 255, 0.7);
@@ -230,6 +226,7 @@ main img {
   justify-content: center; 
   align-items: center; 
   transition: opacity 0.7s ease;
+  line-height: 65px;
 }
 
 .thumbnail img {
@@ -260,7 +257,7 @@ button.showSectionButton {
 
 .classic-link , input.send , button.divtoggler , .file-label {
   cursor: pointer;
-  color: #ff3a3a;
+  color: inherit;
   font-family: Roboto;
   font-weight: 400;
   font-size: 26px;
@@ -269,6 +266,12 @@ button.showSectionButton {
   border: none;
   background-color: rgba(255,255,255,0);
 }
+
+button.divtoggler:active , button.divtoggler:focus , button.filter-btn:active , button.filter-btn:focus {
+  color: grey;
+}
+
+
 
 .list {list-style-type: decimal-leading-zero; margin: 0 20px 20px 20px}
 
@@ -292,24 +295,6 @@ input[type="file"] {display: none;}
 textarea {min-height: 100px; max-width: 100%;}
 ::placeholder {color: inherit; opacity: 0.33;}
 textarea:focus, input:focus {outline: none;}
-
-/* Footer prev */
-
-.footer-prev {
-  background-color: #f7f7f7;
-  margin-bottom: 0;
-  padding: 30px 30px 50px 30px;
-  max-width: calc(100% - 60px);
-}
-
-.footer-prev h2{margin: 0 0 25px 0;}
-
-.module {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
-  gap: 50px 100px;
-  width: 100%;
-}
 
 /* faces container */
 
@@ -377,16 +362,17 @@ ul.cartouche {
 /* responsive */
 
 @media only screen and (min-width: 1080px) {
-  .split {display: grid; grid-template-columns: repeat(2, 1fr);}
+  .split {display: grid; grid-template-columns: repeat(2, 1fr); margin: 150px 0;}
   .mono {width: 60%; margin: 100px 2.5% 100px 37.5%;}
   .long {width: calc(60% - 20px);}
   .sidenav.open {width: 50%;}
   .burger , .sidenav {display: none;}
+  div.right , div.left {max-width: 650px;}
 }
 
 @media only screen and (min-width: 500px) {
-  section.centered {grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));}
-  .thumbnail-shower {grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));}
+  section.menu {grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));}
+  .thumbnail-shower {grid-template-columns: repeat(auto-fit, minmax(425px, 1fr));}
 }
 
 @media only screen and (max-width: 1080px) {
@@ -396,9 +382,10 @@ ul.cartouche {
   .sidenav.open {width: 100%;}
   .desktop-menu {display: none;}
   #DMB1 , #LS1 {display: none;}
+  div.right , div.left {max-width: 100%; margin: 80px 0;}
 }
 
-@media only screen and (min-width: 980px) {
+@media only screen and (min-width: 880px) {
   .duo div {width: 50%; float: left; box-sizing: border-box; padding: 5px;}
 }
 
@@ -427,7 +414,8 @@ header {
   left: 0;
   width: calc(100% - 60px);
   z-index: 3;
-  background-color: white;
+  background: rgb(255,255,255);
+  background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.75) 100%);
 }
 
 header img {
@@ -552,13 +540,14 @@ a:hover , .sidenav a:hover, .sub-links a:hover , header img:hover , .burger:hove
 .darkModeToggle:checked + .darkModeLabel {background-image: url('elements/dm-sun.svg');}
 
 body.dark-mode {background-color: #1B1B1A; color: #fff;}
-body.dark-mode header {background-color: #1B1B1A; color: #fff;}
+body.dark-mode header {background: rgb(27,27,26);
+background: linear-gradient(0deg, rgba(27,27,26,0) 0%, rgba(27,27,26,0.75) 100%); color: #fff;}
 body.dark-mode .sidenav {background-color: #1B1B1A;}
 body.dark-mode .dropdown-menu {background-color: #1B1B1A;}
 body.dark-mode footer {background-color: #1B1B1A; color: #fff;}
 body.dark-mode .sidenav a , body.dark-mode .sub-links a {color: #fff;}
 body.dark-mode .bar1 , body.dark-mode .bar2 , body.dark-mode .bar3 {background-color: #fff;}
-body.dark-mode .footer-prev {background-color: #262626;}
 body.dark-mode img.svg-img {filter: brightness(0) invert(0.95);}
 body.dark-mode .map {filter: grayscale(100%) invert(92%) contrast(83%);}
 body.dark-mode .cache {background-color: rgba(0, 0, 0, 0.7); color: white;}
+body.dark-mode .scroll {color: white;}
