--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
 	margin: 20px;
 	width: calc(100% - 40px);
 	overflow-x: hidden;
-
 	font-family: Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
@@ -24,26 +23,44 @@ h1 {
 	font-size: clamp(22px, 2vw, 32px);
 }
 
+/* NAVIGATION */
+
+#navbar {
+  width: 100%;
+  height: 90px; 
+  background: url(library/pictos/nav.png);
+  background-size: auto 90px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  transition: top 0.3s ease; 
+  z-index: 999;
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+}
+
+nav img {height: 60px; display: block;}
+
+#navbar a {margin: -5px 25px 0 25px;}
+#navbar a:nth-of-type(2) {margin: 4px 25px 0 25px;}
+
+#navbar * {transition: opacity 0.2s ease;}
+
 /* HEADER */
 
 header {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr; 
-  align-items: center;
-  margin-bottom: 75px;
+  margin: 100px 0 0 0;
+  color: white;
 }
 
 header img {height: 120px; transition: height 0.3s ease;}
 header.scrolled img {height: 20px;}
 
 
-header a:first-child {justify-self: start;}
-header img:nth-child(2) {justify-self: center;}
-header a:last-child {justify-self: end;}
-
 /* MAIN */
 
-main {width: 100%; margin: 200px 0;}
+main {width: 100%; margin: 300px 0 0 0;}
 section div {margin-bottom: 50px;}
 
 section p {
@@ -52,7 +69,7 @@ section p {
 	column-gap: 10px;
 }
 
-section img {max-width: 50%; float: right;}
+section img {max-width: 100%;}
 
 /* FOOTER */
 
@@ -65,20 +82,13 @@ footer {
   margin-right: -40px; 
 }
 
-.image {
-  position: absolute;
-  width: 265px;
-  height: auto;
-}
+.image {position: absolute; width: 265px; height: auto;}
 
 .image1 {z-index: 2; }
 .image2 {z-index: 1; transform: translate(45px, -103px);}
 .image3 {z-index: 0; transform: translate(-45px, 0px);}
 
-div.footer {
-  margin-bottom: -300px;
-  margin-top: 200px;
-}
+div.footer {margin-bottom: -300px; margin-top: 250px;}
 
 /* RESPONSIVE */
 
@@ -86,10 +96,15 @@ div.footer {
   div.footer {margin-bottom: 40px;}
 }
 
+@media only screen and (max-width: 450px) {
+  section p {column-count: 1;}
+}
+
 @media only screen and (min-width: 1100px) {
 	body {margin: 60px; width: calc(100% - 120px);}
-	section {display: flex; gap: 75px;}
-  section div {flex: 50%;}
+	section {display: flex; gap: 5%;}
+  section div:first-child {flex: 35%;}
+  section div:last-child {flex: 60%;}
 }
 
 @media only screen and (max-width: 1300px) {
