--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 /* GENERAL */
 
+html {
+  width: 100%;
+}
+
 body {
-	margin: 20px;
-	width: calc(100% - 40px);
 	overflow-x: hidden;
 	font-family: Helvetica, Arial, sans-serif;
   font-weight: normal;
@@ -29,7 +31,7 @@ header img {height: 130px;}
 
 /* NAVIGATION */
 
-nav {width: 50%; position: fixed; z-index: 999;}
+nav {width: 20%; position: fixed; z-index: 999;}
 nav img {float: right; cursor: pointer;}
 
 nav div {display: none; position: absolute; top: 160px; right: 120px; transform: translateY(-100%);}
@@ -87,12 +89,16 @@ div.footer {margin-bottom: -300px; margin-top: 200px;}
   section {display: flex; gap: 5%;}
   section div:first-child {flex: 35%;}
   section div:last-child {flex: 60%;}
+  img.mobile {display: none;}
 }
 
 @media only screen and (max-width: 900px) {
-  section div.cadre {display: none; justify-content: center;}
+  body {margin: 20px; width: calc(100% - 40px);}
+  section div.cadre {display: flex; justify-content: center;}
   section div img {max-width: 350px; margin: auto;}
   nav {top: 23px; right: 25px;}
+  footer {display: none;}
+  img.mobile {display: block; width: 100%; max-width: 550px; margin: 0 auto 100px auto;}
   #menuButton1 {display: none;}
   #menuButton2 {display: inline;}
 
