--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
 p {margin: 0;}
 a {color: inherit; text-decoration: solid underline; display: inline-block; transition: transform 0.3s ease;}
 
+a:hover {transform: scale(0.9);}
+
 h1 {
 	margin: -7px 0 40px 0;
 	font-weight: normal;
@@ -32,19 +34,32 @@ header img {height: 130px;}
 /* NAVIGATION */
 
 nav {width: 20%; position: fixed; z-index: 999;}
-nav img {float: right; cursor: pointer;}
+nav img {cursor: pointer;}
 
-nav div {display: none; position: absolute; top: 160px; right: 120px; transform: translateY(-100%);}
-nav div a {display: block; position: relative; }
-nav div a img {width: auto; height: 55px;}
+#menuButton1 {display: inline; height: 35px; z-index: 20; position: relative;}
+#menuButton2 {display: none; width: 35px; z-index: 20; position: relative;}
 
-#image1{transform: rotate(20deg);}
-#image2{transform: translate(-15px, -4px);}
-#image3{transform: rotate(-23deg) translate(-10px, -9px);}
-#image4{transform: rotate(-40deg) translate(30px, 26px);}
+#navLinks {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 0;
+  background-color: rgba(255, 247, 234, 0.95);
+}
 
-#menuButton1 {display: inline; height: 35px;}
-#menuButton2 {display: none; width: 35px;}
+#navLinks div {
+  position: absolute;
+  top: 50%;         
+  left: 50%;             
+  transform: translate(-50%, -50%);
+  text-align: center; 
+}
+
+#navLinks a {display: block;}
+#navLinks img {height: 100px;}
 
 /* MAIN */
 
@@ -101,9 +116,4 @@ div.footer {margin-bottom: -300px; margin-top: 200px;}
   img.mobile {display: block; width: 100%; max-width: 370px; margin: 0 auto 100px auto;}
   #menuButton1 {display: none;}
   #menuButton2 {display: inline;}
-
-  #image1{transform: rotate(0deg) translate(75px, 140px);}
-  #image2{transform: rotate(-18deg) translate(35px, 162px);}
-  #image3{transform: rotate(-40deg) translate(0px, 160px);}
-  #image4{transform: rotate(-60deg) translate(-30px, 213px);}
 }
