--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ body {
 }
 
 p {margin: 0;}
-a {color: inherit; text-decoration: solid underline; display: inline-block; transition: transform 0.3s ease;}
 
+a {color: inherit; text-decoration: solid underline; display: inline-block; transition: transform 0.3s ease;}
+h1 span {font-size: 13px; display: inline-block; transform: translateY(-10px);}
 a:hover {transform: scale(0.9);}
 
 h1 {
@@ -47,7 +48,7 @@ nav img {cursor: pointer;}
   width: 100vw;
   height: 100vh;
   z-index: 0;
-  background-color: rgba(255, 247, 234, 0.95);
+  background-color: rgba(34, 255, 152, 1);
 }
 
 #navLinks div {
