--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav img {cursor: pointer;}
   width: 100vw;
   height: 100vh;
   z-index: 0;
-  background-color: rgba(34, 255, 152, 1);
+  background-color: #fff7ea;
 }
 
 #navLinks div {
