--- a/style.css
+++ b/style.css
@@ -12,21 +12,15 @@ body {
   font-size: 13px;
   line-height: 1.2;
   background-color: #fff7ea;
+  background-image: url(library/elements/fond.jpg);
+  background-attachment: fixed;
+  background-size: 100%;
+  background-repeat: repeat;
 }
 
 p {margin: 0;}
 
-a {
-  color: inherit;
-  text-decoration: none;
-  transition: transform 0.3s ease;
-  word-break: break-all; 
-  overflow-wrap: anywhere; 
-  white-space: normal; 
-}
-
-h1 span {font-size: 13px; display: inline-block; transform: translateY(-10px);}
-a:hover {transform: scale(0.9);}
+a {color: inherit; text-decoration: none; transition: transform 0.3s ease;}
 
 h1 {
 	margin: -7px 0 40px 0;
@@ -54,7 +48,7 @@ main {width: 100%; margin: 200px 0 0 0;}
 
 section div {margin-bottom: 50px;}
 section p {margin: 15px 0; column-count: 2; column-gap: 10px;}
-section img {max-width: 100%;}
+section img {width: 100%; max-width: 550px; display: block; margin: 0 auto;}
 
 /* FOOTER */
 
