--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 /* GENERAL */
 
-html {
-  width: 100%;
-}
+html {width: 100%;}
 
 body {
 	overflow-x: hidden;
@@ -12,35 +10,25 @@ body {
   font-size: 13px;
   line-height: 1.2;
   background-color: #fff7ea;
-  background-image: url(library/elements/fond.jpg);
+  background-image: url(library/elements/fond.png);
   background-attachment: fixed;
   background-size: 100%;
   background-repeat: repeat;
 }
 
 p {margin: 0;}
+h1 {margin: -7px 0 40px 0; font-weight: normal; font-style: normal; font-size: clamp(22px, 2vw, 32px);}
 
-a {color: inherit; text-decoration: none; transition: transform 0.3s ease;}
+h1 a , p a {color: inherit; text-decoration: none; display: inline-block; transition: 0.2s ease-in;}
+h1 a {background-image: url(library/elements/john.png); background-size: 100%; background-position: center; background-repeat: no-repeat;}
 
-h1 {
-	margin: -7px 0 40px 0;
-	font-weight: normal;
-  font-style: normal;
-	font-size: clamp(22px, 2vw, 32px);
-}
+h1 a:hover , p a:hover {transform: scale(0.9);}
 
 /* HEADER */
 
-header {width: 50%;}
-header img {height: 130px;}
-
-/* NAVIGATION */
-
-nav {width: 20%; position: fixed; z-index: 999;}
-nav img {cursor: pointer;}
-
-#menuButton1 {display: inline; height: 35px; z-index: 20; position: relative;}
-#menuButton2 {display: none; width: 35px; z-index: 20; position: relative;}
+header {width: 100%;}
+header img {width: 330px; transition: 0.2s ease-in;}
+header a:hover img {transform: scale(0.9);}
 
 /* MAIN */
 
@@ -48,7 +36,7 @@ main {width: 100%; margin: 200px 0 0 0;}
 
 section div {margin-bottom: 50px;}
 section p {margin: 15px 0; column-count: 2; column-gap: 10px;}
-section img {width: 100%; max-width: 550px; display: block; margin: 0 auto;}
+section img {width: 100%; display: block; margin: 0 auto 15px auto;}
 
 /* FOOTER */
 
@@ -62,26 +50,20 @@ footer {
 }
 
 .image {position: absolute; width: 265px; height: auto;}
-
 .image1 {z-index: 2; }
 .image2 {z-index: 1; transform: translate(45px, -103px);}
 .image3 {z-index: 0; transform: translate(-45px, 0px);}
 
 div.footer {margin-bottom: -300px; margin-top: 200px;}
+div.footer img {width: 170px; float: left; padding: 0 35px 20px 0;}
 
 /* RESPONSIVE */
 
-@media only screen and (max-width: 620px) {
-  div.footer {margin-bottom: 40px;}
-}
-
-@media only screen and (max-width: 450px) {
-  section p {column-count: 1;}
-}
+@media only screen and (max-width: 620px) {div.footer {margin-bottom: 40px;}}
+@media only screen and (max-width: 450px) {section p {column-count: 1;}}
 
 @media only screen and (min-width: 900px) {
   body {margin: 60px; width: calc(100% - 120px);}
-  nav {top: 95px; right: 60px;}
   section {display: flex; gap: 5%;}
   section div:first-child {flex: 35%;}
   section div:last-child {flex: 60%;}
@@ -91,10 +73,7 @@ div.footer {margin-bottom: -300px; margin-top: 200px;}
 @media only screen and (max-width: 900px) {
   body {margin: 20px; width: calc(100% - 40px);}
   section div.cadre {display: flex; justify-content: center;}
-  section div img {max-width: 350px; margin: auto;}
-  nav {top: 23px; right: 25px;}
+  img.illu {max-width: 350px; margin: auto;}
   footer {display: none;}
   img.mobile {display: block; width: 100%; max-width: 370px; margin: 0 auto 100px auto;}
-  #menuButton1 {display: none;}
-  #menuButton2 {display: inline;}
 }
