--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 	font-family: Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
-  font-size: 13px;
+  font-size: 14px;
   line-height: 1.2;
   background-color: #fff7ea;
   background-image: url(library/elements/fond.png);
@@ -20,8 +20,6 @@ p {margin: 0;}
 h1 {margin: -7px 0 40px 0; font-weight: normal; font-style: normal; font-size: clamp(22px, 2vw, 32px);}
 
 h1 a , p a {color: inherit; text-decoration: none; display: inline-block; transition: 0.2s ease-in;}
-h1 a {background-image: url(library/elements/john.png); background-size: 100%; background-position: center; background-repeat: no-repeat;}
-
 h1 a:hover , p a:hover {transform: scale(0.9);}
 
 /* HEADER */
@@ -34,9 +32,22 @@ header a:hover img {transform: scale(0.9);}
 
 main {width: 100%; margin: 200px 0 0 0;}
 
-section div {margin-bottom: 50px;}
-section p {margin: 15px 0; column-count: 2; column-gap: 10px;}
-section img {width: 100%; display: block; margin: 0 auto 15px auto;}
+main h1 a {height: 1.3em; margin: 0; transform: translateY(20%);}
+main h1 a img {
+  height: 1.3em; /* Correspond à la hauteur de ligne de h1 */
+    object-fit: contain; /* Garde les proportions de l'image */
+
+margin: 0;
+}
+
+section.endeux div {margin-bottom: 50px;}
+section.endeux p {margin: 15px 0;}
+section.endeux p.column {column-count: 2; column-gap: 10px;}
+section.endeux img {width: 100%; display: block; margin: 0 auto 15px auto;}
+
+main.grilled {display: grid; grid-template-columns: repeat(auto-fill, minmax(275px, 1fr)); gap: 35px;}
+main.grilled section img {width: 100%;}
+main.grilled section p {margin-top: 10px;}
 
 /* FOOTER */
 
@@ -64,15 +75,15 @@ div.footer img {width: 170px; float: left; padding: 0 35px 20px 0;}
 
 @media only screen and (min-width: 900px) {
   body {margin: 60px; width: calc(100% - 120px);}
-  section {display: flex; gap: 5%;}
-  section div:first-child {flex: 35%;}
-  section div:last-child {flex: 60%;}
+  section.endeux {display: flex; gap: 5%;}
+  section.endeux div:first-child {flex: 35%;}
+  section.endeux div:last-child {flex: 60%;}
   img.mobile {display: none;}
 }
 
 @media only screen and (max-width: 900px) {
   body {margin: 20px; width: calc(100% - 40px);}
-  section div.cadre {display: flex; justify-content: center;}
+  section.endeux div.cadre {display: flex; justify-content: center;}
   img.illu {max-width: 350px; margin: auto;}
   footer {display: none;}
   img.mobile {display: block; width: 100%; max-width: 370px; margin: 0 auto 100px auto;}
