--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 p {margin: 0;}
-h1 {margin: -7px 0 40px 0; font-weight: normal; font-style: normal; font-size: clamp(22px, 2vw, 32px);}
+h1 {margin: -7px 0 40px 0; font-weight: normal; font-style: normal; font-size: clamp(24px, 2vw, 32px);}
 
 h1 a , p a {color: inherit; text-decoration: none; display: inline-block; transition: 0.2s ease-in;}
 h1 a:hover , p a:hover {transform: scale(0.9);}
@@ -41,8 +41,8 @@ section.endeux p.column {column-count: 2; column-gap: 10px;}
 section.endeux img {width: 100%; display: block; margin: 0 auto 15px auto;}
 
 main.grilled {display: grid; grid-template-columns: repeat(auto-fill, minmax(275px, 1fr)); gap: 35px;}
-main.grilled section img {width: 100%;}
-main.grilled section p {margin-top: 10px;}
+main.grilled section img {width: 100%; float: left;}
+main.grilled section p {margin-top: 10px; float: right;}
 
 /* FOOTER */
 
@@ -66,7 +66,7 @@ div.footer img {width: 170px; float: left; padding: 0 35px 20px 0;}
 /* RESPONSIVE */
 
 @media only screen and (max-width: 620px) {div.footer {margin-bottom: 40px;}}
-@media only screen and (max-width: 450px) {section p {column-count: 1;}}
+@media only screen and (max-width: 485px) {section.endeux p.column {column-count: 1; column-gap: 10px;}}
 
 @media only screen and (min-width: 900px) {
   body {margin: 60px; width: calc(100% - 120px);}
